Fix the url input field wrapped in between http://____.meet.me

--- a/public/stylesheets/formtastic_changes.css
+++ b/public/stylesheets/formtastic_changes.css
@@ -18,3 +18,4 @@ form.formtastic fieldset.buttons li, form.formtastic fieldset ol li input#submit
 form.formtastic fieldset.buttons { padding: 0; }
 form.formtastic fieldset.buttons ol li { float: none; width: 100%;}
 form.formtastic fieldset.register ol li { float: none; width: 100%; margin-bottom: 5px; }
+form.formtastic fieldset ol li input.short { float: none; }
